data/derived/comb/progs/unify/prog6965.ml.out
Characters 37-38:
  wwhile (f,f b = b);;
                  ^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
